# usv-navigation

./: .dockerignore  .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  ros2.yml
ais_replay/: README.md  __init__.py  runner.py  sources.py  tracker.py
ais_replay/sample_data/: generate_sample.py
ais_replay/scripts/: record_ais.py  run_replay.py
ais_traffic/: README.md  __init__.py  geo.py  runner.py  sources.py  tracker.py
ais_traffic/sample_data/: generate_sample.py  sample_strait.jsonl
ais_traffic/scripts/: record_ais.py  run_replay.py
commonocean_integration/: README.md  __init__.py  sim_utils.py
commonocean_integration/adapters/: __init__.py  controller.py  vessel_factory.py
commonocean_integration/evaluation/: __init__.py  metrics.py
commonocean_integration/scripts/: animate_scenario.py  batch_evaluate.py  batch_evaluate_handcrafted.py  batch_evaluate_marine_cadastre.py  commonocean_collision_test.py  commonocean_scenario.py  plot_trajectories.py  replay_scenario.py
docker/: Dockerfile  docker-compose.yml  start.sh
docs/: design.md
examples/: README.md  commonocean_collision_test.py  commonocean_scenario.py  realtime_simulation.py  simulate_colav.py
examples/output/run_scenario1/: continuous_state.csv
examples/output/run_scenario2/: continuous_state.csv
examples/output/run_scenario3/: continuous_state.csv
examples/output/run_scenario4/: continuous_state.csv
examples/output/run_scenario5/: continuous_state.csv
examples/output/run_scenario6/: continuous_state.csv
ros2/: README.md
ros2/src/colav_cpp/: CMakeLists.txt  package.xml
ros2/src/colav_cpp/include/colav_cpp/: control.hpp  geometry.hpp  risk.hpp  sync_runtime.hpp  virtual_waypoint.hpp
ros2/src/colav_cpp/scripts/: gen_reference.py
ros2/src/colav_cpp/src/: colav_node.cpp  control.cpp  geometry.cpp  risk.cpp  sync_runtime.cpp  virtual_waypoint.cpp
ros2/src/colav_cpp/test/: reference_control.csv  reference_geom.csv  reference_risk.csv  reference_trajectory.csv  reference_v1.csv  test_control.cpp  test_geometry.cpp  test_risk.cpp  test_trajectory.cpp  test_v1.cpp
ros2/src/colav_interfaces/: CMakeLists.txt  package.xml
ros2/src/colav_interfaces/msg/: Obstacle.msg  ObstacleArray.msg
ros2/src/colav_ros/: package.xml  setup.cfg  setup.py
ros2/src/colav_ros/colav_ros/: colav_node.py  fake_world.py  gz_obstacles.py  util.py
ros2/src/colav_ros/launch/: demo.launch.py  gazebo_demo.launch.py
ros2/src/colav_ros/test/: test_demo_launch.py
ros2/src/colav_ros/worlds/: colav_demo.sdf
src/: main.py
src/colav_automaton/: __about__.py  __init__.py  _compat.py  automaton.py  sync_runtime.py
src/colav_automaton/adapters/: __init__.py  commonocean.py  vessel_factory.py
src/colav_automaton/controllers/: __init__.py  prescribed_time.py  unsafe_sets.py  virtual_waypoint.py
src/colav_automaton/dynamics/: __init__.py  dynamics.py
src/colav_automaton/guards/: __init__.py  conditions.py  guards.py
src/colav_automaton/integration/: __init__.py  integration.py
src/colav_automaton/invariants/: __init__.py  invariants.py
src/colav_automaton/resets/: __init__.py  resets.py
src/colav_automaton/unsafe_sets/: __init__.py  unsafe_sets.py
src/colav_automaton_evaluation/figure_generator/: __init__.py  figure_generator.py
src/usv-navigation/dynamics/: dynamics.py
src/usv-navigation/guards/: conditions.py  guards.py
src/usv-navigation/integration/: integration.py
src/usv-navigation/invariants/: invariants.py
src/usv-navigation/resets/: resets.py
src/usv-navigation/unsafe_sets/: unsafe_sets.py
tests/: conftest.py  test_ais_replay.py  test_ais_traffic.py  test_automaton.py  test_behaviour_regression.py  test_compat.py  test_conditions.py  test_guards.py  test_metrics.py  test_sync_runtime.py  test_unsafe_sets.py  test_virtual_waypoint.py
