<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>colav_cpp</name>
  <version>0.1.0</version>
  <description>C++ reimplementation of the COLAV controller core, verified
  bit-identical against the Python reference (colav_automaton). The eventual
  rclcpp node links this library; the cross-check tests are the verification
  artifact (Python is the source of truth).</description>
  <maintainer email="stolbergermichael5@gmail.com">Michael Stolberger</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>colav_interfaces</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
